OFJ-303 Convert flash charts and graphs to a standard technology (PNG, SVG, or canvas)
Charts will now show the Openfisma shark (toon/logo) faded as the background.
Added plugin for jqPlot to tilt the x/y axis labels (this prevents axis labels from overlapping when they are too long).
Changed the data-output-structure of the remote data source for the Reported Incidents By Bureau chart on the Incident dashboard.
Switched the Reported Incidents By Bureau chart on the Incident dashboard over to the new chart library.
Added loading-spinner to show while the chart is being loaded (loading data from remote data source).
Charts will now fade-in upon presentation.

--- a/application/modules/default/views/scripts/chart/chartJQP.phtml
+++ b/application/modules/default/views/scripts/chart/chartJQP.phtml
@@ -1,18 +1,34 @@
 
 <?php /* the div for jqPlot to use (the JavaScript will create canvases in this */ ?>
 
-<div <?php echo $this->escape($this->divContainerArgs, 'none');  ?> >
-
-            <div name="<?php
-                    echo $this->escape($this->chartData['uniqueid'], 'none'); 
-                ?>" id="<?php
-                    echo $this->escape($this->chartData['uniqueid'], 'none');
-                ?>" style="width:<?php
-                                    echo $this->escape($this->chartData['width'], 'none');
-                ?>px; height:<?php 
-                                    echo $this->escape($this->chartData['height'], 'none'); 
-                ?>px;">
-            </div>
+<div class="yui-navset">
+    <div id="<?php 
+        echo $this->escape($this->chartData['uniqueid'], 'none');
+    ?>loader" class="loading" style="width:<?php
+                        echo $this->escape($this->chartData['width'], 'none');
+                    ?>px; height:<?php 
+                        echo $this->escape($this->chartData['height'], 'none'); 
+                    ?>px;">
+        <div>
+        </div>
+    </div>
+    <div id="<?php
+                echo $this->escape($this->chartData['uniqueid'], 'none');
+    ?>holder" <?php
+                echo $this->escape($this->divContainerArgs, 'none');
+    ?> >
+                <div name="<?php
+                        echo $this->escape($this->chartData['uniqueid'], 'none'); 
+                    ?>" id="<?php
+                        echo $this->escape($this->chartData['uniqueid'], 'none');
+                    ?>" style="width:<?php
+                                        echo $this->escape($this->chartData['width'], 'none');
+                    ?>px; height:<?php 
+                                        echo $this->escape($this->chartData['height'], 'none'); 
+                    ?>px;">
+                    Loading chart data...
+                </div>
+    </div>
 </div>
 
 <?php /* call javascript:createChartJQChart(obj) defined in jqplotWrapper.js which will create the chart */ ?>
