OFJ-963 Executive dashboard
Extended the chart wrapper further to support "widgets" (textboxes and dropdown combo-boxes) that will, once changed,
fade out the chart, reload the data from the remote data source (while pushing the data from the visible variables to
the controller), and represent the chart.

"widget" variables are also stored in cookies, so when a user selects a certain mode for a chart, it will retain that
setting for the next page load.

This is in preparation for the interactive exec-dashboard charts.

--- a/application/modules/default/views/scripts/chart/chart.phtml
+++ b/application/modules/default/views/scripts/chart/chart.phtml
@@ -28,6 +28,9 @@
                     ?>px;">
                     Loading chart data...
                 </div>
+                <span id="<?php
+                    echo $this->escape($this->chartData['uniqueid'], 'none');
+                ?>WidgetSpace"></span>
     </div>
 </div>
 
