OFJ-963 Executive dashboard
Made the chart class more object oriented. The class no longer expects an array to be passed to it. Functions are used to set data within the class.
Added a addColumn() function to the class where data to be plotted and a link may be added at the same time.

--- a/application/modules/default/views/scripts/chart/chart.phtml
+++ b/application/modules/default/views/scripts/chart/chart.phtml
@@ -23,6 +23,6 @@
 
 <?php /* call javascript:createChartJQChart(obj) defined in jqplotWrapper.js which will create the chart */ ?>
 <script>
-    var thisChartObjData = <?php echo $this->escape($this->chartData, 'json'); ?>;
+    var thisChartObjData = <?php echo $this->escape($this->chartParamArr, 'json'); ?>;
     createJQChart(thisChartObjData);
 </script>
