OFJ-963 Executive dashboard
Changed the code that creates the charts in the dashboard-controller to use the object oriented model of the Fisma_Chart class
Cleaned up the Fisma_Chart class a bit and improved the Fisma_Chart->export() function
Added the 'No Mitigation Strategy' chart described in the power-point slide (FDIC)

--- a/application/modules/default/views/scripts/chart/chart.phtml
+++ b/application/modules/default/views/scripts/chart/chart.phtml
@@ -19,6 +19,10 @@
                 <span id="<?php echo $this->escape($this->chartId, 'none');?>WidgetSpace">
                 </span>
     </div>
+    
+    <div id="<?php echo $this->escape($this->chartId, 'none'); ?>table" style="display:none">
+    </div>
+    
 </div>
 
 <?php /* call javascript:createChartJQChart(obj) defined in jqplotWrapper.js which will create the chart */ ?>
