--- a/application/modules/finding/views/scripts/dashboard/index.phtml
+++ b/application/modules/finding/views/scripts/dashboard/index.phtml
@@ -1,6 +1,7 @@
 <?php Fisma_Format_Section::startSection('Finding Dashboard'); ?>
 
 <div class='dashboardChart'>
+    Current Security Control Deficiencies
     <?php echo $this->escape($this->controlDeficienciesChart, 'none'); ?>
 </div>
 
