OFJ-963	Executive dashboard
Added Overdue Findings chart with "drilldown" links to search page
Removed outdatted xml files from only finding-distibution charts

--- a/application/modules/default/views/scripts/dashboard/index.phtml
+++ b/application/modules/default/views/scripts/dashboard/index.phtml
@@ -107,6 +107,14 @@ if ( !empty( $this->alert['TOTAL'] ) ) {
                     <?php echo $this->escape($this->chartNoMit, 'none'); ?>
                 </td>
             </tr>
+            <tr>
+                <td align="center">
+                    <?php echo $this->escape($this->chartOverdueFinding, 'none'); ?>
+                </td>
+                <td align="center">
+                     
+                </td>
+            </tr>
         </table>
     </div>
 <?php 
