OFJ-963 Executive dashboard
The divs below the charts that hold chart options/widgets will not show the textboxes and drop-down-selection-lists until the user clicks to edit the options.
Instead, tiny text below the charts will state the basic query paramiters (based on widgets/chart-options) and have a link to change them (show the widgets (textboxes and drop-down-lists)).
Changed the Finding Type option names of the Findings by Workflow chart (from 'All Combined' to 'Totals' and 'All Divided' to 'High, Moderate, and Low').
Updated the charts on the System Inventory dashboard to use the Fisma_Chart object oriented functions (they were completly broken before this).
Text within the chart divs will now align to left (not center).
A gap will no longer be shown between slices on pie charts.
Bars on bar charts will now have set widths (they will no longer streatch out and look abnormally fat).
Data-point-labels (the labels infront of the bars on bar charts) are now bolded.

--- a/application/modules/finding/views/scripts/dashboard/index.phtml
+++ b/application/modules/finding/views/scripts/dashboard/index.phtml
@@ -6,6 +6,7 @@
         ?>
         
         <em>
+            <br/>
             Findings Due in (X) Number of Days.
         </em>
 
@@ -23,6 +24,7 @@
         ?>
         
         <em>
+            <br/>
             Findings Past Due by (x) Number of Days.
         </em>
 
@@ -37,11 +39,12 @@
 <div class="column left">
     <div style='text-align: center;'>
         <?php
-            Fisma_Format_Section::startSection('Findings by Worklow Process');
+            Fisma_Format_Section::startSection('Findings by Workflow Process');
             echo $this->escape($this->chartTotalStatus, 'none');
         ?>
         
         <em>
+            <br/>
             Workflow Process (Includes Only Open Findings).
         </em>
 
@@ -59,6 +62,7 @@
         ?>
         
         <em>
+            <br/>
             Findings Past Due by (x) Number of Days.
         </em>
 
