OFJ-963 Executive dashboard
Added the Open Findings By Organization chart, with the ability to show counts of findings of high,mod,low threat levels for
agencies, bureaus, organizations, and systems. The finding counts are totaled with a given target/organizations
child organizations and their child organizations and so on...

Fixed a bug where widget settings colided with other widget settings of other charts where the widget names were the same

Apparently I enabeled a feature in my text editor today that automatically erases white space on lines that only have spaces,
hence the spam of \n-\n+ in the diff, I apologise for that. I have disabeled this feature, and it will not happen again.

--- a/application/modules/finding/views/scripts/dashboard/index.phtml
+++ b/application/modules/finding/views/scripts/dashboard/index.phtml
@@ -74,6 +74,17 @@
 
 <div class="clear"></div>
 
+<?php Fisma_Format_Section::startSection('Open Findings By Organization'); ?>
+
+<div class='dashboardChart'>
+    <?php echo $this->escape($this->findingOrgChart, 'none'); ?>
+</div>
+
+<div class="clear"></div>
+
+<?php Fisma_Format_Section::stopSection(); ?>
+
+
 <?php Fisma_Format_Section::startSection('Current Security Control Deficiencies'); ?>
 
 <div class='dashboardChart'>
