OFJ-963 Executive dashboard
- Fixed a bug where charts would sometimes not appear (fading problem).
- Fixed some bugs related to auto-widths with charts, when charts are in scrollable divs now, the widget space below and the threat-legend above them will line up accurately.
- The Fisma_Chart->setWidth(123) is now the chart's minimum width, if the chart cannot fit within 123 (the width given), it will switch to auto-width mode which places itself into a scrollable div and lets the div take 100% of its parent.
- The auto-width mode can now be forced (instead of automatically triggered) through Fisma_Chart->setWidthAuto(true).

--- a/application/modules/default/views/scripts/chart/chart.phtml
+++ b/application/modules/default/views/scripts/chart/chart.phtml
@@ -19,8 +19,8 @@
                     Loading chart data...
                 </div>
                 
-                <span id="<?php echo $this->escape($this->chartId, 'none');?>WidgetSpace">
-                </span>
+                <div id="<?php echo $this->escape($this->chartId, 'none');?>WidgetSpace">
+                </div>
     </div>
     
     <div id="<?php echo $this->escape($this->chartId, 'none'); ?>table" style="display:none">
