OFJ-963 Executive dashboard
- Added global chart options for charts (shadows, drop-shadows, grid-lines, fading effects)
- Changed the default day ranges for the top-left (Finding Forecast) chart to 0,15,30,60,90
- Disabled the legend for pie charts and added in plugin-code for placing titles next to each pie slice.
- Removed text at the bottom of each Zend_Format_Section on the Findings Dashboard, and placed them into the x-axis label
- Added outlining style to point-labels to make point-labels easier to see on darker color bars
- Fixed the queries and column labels for the top-left, top-right, and middle-right charts to not show/sum overlapping days
- Adjusted point labels to not be off-center when showing a vale of 100+ (3-digit numbers)
- All chart columns are now sorted alphabetically
- The fading option is now disabled by default
- Removed the "Everything" Disaplay-By option from the Findings By Organization (upper-bottom) chart as requested.
- Fixed the loading spinners to be centered within its parent
- Chart options will no longer fade-out or disappear with charts on reload of the external data source
- A gear on the top-right corner of a given chart's parent div will now be used to access chart options and settings.
- Pie charts will no longer show legends (see next point)
- Pie charts will now state what each slice represents textually next to each slice, with a percentage as a point label on the slice.

--- a/application/modules/default/views/scripts/chart/chart.phtml
+++ b/application/modules/default/views/scripts/chart/chart.phtml
@@ -2,7 +2,19 @@
 <?php /* the div for jqPlot to use (the JavaScript will create canvases in this */ ?>
 
 <div class="yui-navset">
-    <div id="<?php echo $this->escape($this->chartId, 'none'); ?>loader" class="loading">
+
+    <table width="100%" style="position: absolute; z-index: 1">
+        <tr>
+            <td align=right>
+                <a href="JavaScript: // Click to show chart options";
+                onClick="document.getElementById('<?php echo $this->escape($this->chartId, 'none'); ?>WidgetSpaceHolder').style.display='';">
+                    <img src="/images/gear.png" width="35" />
+                </a>
+            </td>
+        </tr>
+    </table>
+
+    <div id="<?php echo $this->escape($this->chartId, 'none'); ?>loader" class="loading" style="width: 100%;">
         
         <div>
         </div>
@@ -15,16 +27,53 @@
             <div id="<?php echo $this->escape($this->chartId, 'none'); ?>toplegend">
             </div>
             
-                <div id="<?php echo $this->escape($this->chartId, 'none'); ?>" >
-                    Loading chart data...
-                </div>
-                
-                <div id="<?php echo $this->escape($this->chartId, 'none');?>WidgetSpace">
-                </div>
+            <div id="<?php echo $this->escape($this->chartId, 'none'); ?>" >
+                Loading chart data...
+            </div>
     </div>
+
+    <br/>
+    <div id="<?php echo $this->escape($this->chartId, 'none');?>WidgetSpaceHolder" class="yui-navset" style="display: none; width: 400px; margin-left: auto; margin-right: auto;">
+        <ul class="yui-nav">
+            <li class="selected">
+                <a href="#tab1">
+                    <em>Chart Paramiters</em>
+                </a>
+            </li>
+            <li>
+                <a href="#tab1">
+                    <em>Global Settings</em>
+                </a>
+            </li>
+        </ul>            
+        <div class="yui-content">
+            <div id="tab1">
+                <div id="<?php echo $this->escape($this->chartId, 'none');?>WidgetSpace">
+                    <!-- char params and widgets placed here by JavaScript -->
+                </div>
+            </div>
+            <div id="tab2" onClick="chartGlobalSettingUpdate(this);" style="text-align: left; ">
+                <input type="checkbox" id="chartGlobal_barShadows" />
+                    Draw shadows behind bars <br/>
+                <input type="textbox" id="chartGlobal_barShadowDepth" value="3" style="width:10px" />
+                    Depth of shadows behind bars (in pixels) <br/>                            
+                <input type="checkbox" id="chartGlobal_dropShadows" />
+                    Draw shadows behind charts <br/>
+                <input type="checkbox" id="chartGlobal_gridLies"/>
+                    Draw grid-lines <br/>
+                <input type="checkbox" id="chartGlobal_fadingDisabeled"/>
+                    Disable fading effects <br/>
+            </div>
+        </div>
+    </div>    
+
+    <script type="text/javascript">
+        var thisName = <?php echo $this->escape($this->chartId, 'none');?>WidgetSpaceHolder;
+        var tabView = new YAHOO.widget.TabView(thisName);
+    </script> 
     
     <div id="<?php echo $this->escape($this->chartId, 'none'); ?>table" style="display:none">
-    </div>
+    </div>   
     
 </div>
 
