OFJ-963 Executive dashboard
- Fixed the issue where the y-axis/row-labels of charts would not always line up with the data plotted.
- - this occurred because upon telling jqPlot library to remove decimal places, it did so by rounding...
- - - and apparently its not smart enough to readjust the locations of these numbers after doing so.
- - this issue was fixed by forcing the max (top) value shown on the row labels to be divisible by 4.
- - - (since there are always 5 row labels shown, and the first is always 0).
- The gear to the top-right of the chart will now toggle the visibility of the chart-settings, not just make it visible.
- Added a "Hide Settings" button to the "Chart Parameters" and "Global Settings" tab under chart settings.
- The basic-chart-settings container will now align correctly (vertically) within its YUI tab.
- Fixed a bug with the Current Security Control Deficiencies (bottom most) chart, where initially its basic-setting ("Display By") was was loading its value from another chart's basic-setting.

--- a/application/modules/default/views/scripts/chart/chart.phtml
+++ b/application/modules/default/views/scripts/chart/chart.phtml
@@ -7,7 +7,7 @@
         <tr>
             <td align=right>
                 <a href="JavaScript: // Click to show chart options";
-                onClick="document.getElementById('<?php echo $this->escape($this->chartId, 'none'); ?>WidgetSpaceHolder').style.display='';">
+                onClick="setChartSettingsVisibility('<?php echo $this->escape($this->chartId, 'none'); ?>', 'toggle');">
                     <img src="/images/gear.png" width="35" />
                 </a>
             </td>
@@ -48,12 +48,17 @@
         </ul>            
         <div class="yui-content">
             <div id="tab1">
+            
                 <div id="<?php echo $this->escape($this->chartId, 'none');?>WidgetSpace">
                     <!-- char params and widgets placed here by JavaScript -->
                 </div>
+                
+                <div style="width: 100%; text-align: right;"><input type="button" value="Hide Settings" onClick="setChartSettingsVisibility('<?php echo $this->escape($this->chartId, 'none'); ?>', false);" /></div>
+                
             </div>
-            <div id="tab2" onClick="globalSettingUpdate('<?php echo $this->escape($this->chartId, 'none');?>');" style="text-align: left; ">
-                <div id="<?php echo $this->escape($this->chartId, 'none');?>GlobSettings">
+            <div id="tab2">
+                
+                <div id="<?php echo $this->escape($this->chartId, 'none');?>GlobSettings" onClick="globalSettingUpdate('<?php echo $this->escape($this->chartId, 'none');?>');" style="text-align: left; ">
                 <input type="checkbox" id="pointLabels" />
                     Draw point-labels (numbers on top of bars) <br/>
                 <input type="checkbox" id="pointLabelsOutline" />
@@ -69,6 +74,9 @@
                 <input type="checkbox" id="fadingDisabeled"/>
                     Disable fading effects <br/>
                 </div>
+                
+                <div style="width: 100%; text-align: right;"><input type="button" value="Hide Settings" onClick="setChartSettingsVisibility('<?php echo $this->escape($this->chartId, 'none'); ?>', false);" /></div>
+                
             </div>
         </div>
     </div>    
