OFJ-963 Executive dashboard
- The background of charts will now be transparent
- Fixed a misspelling on one of the settings tabs for charts
- ACL is handled correctly in all charts (users who do not have access to given systems, will not have their charts factor in totals for chat elements)

--- a/application/modules/default/views/scripts/chart/chart.phtml
+++ b/application/modules/default/views/scripts/chart/chart.phtml
@@ -37,7 +37,7 @@
         <ul class="yui-nav">
             <li class="selected">
                 <a href="#tab1">
-                    <em>Chart Paramiters</em>
+                    <em>Chart Parameters</em>
                 </a>
             </li>
             <li>
