OFJ-963 Executive dashboard
- Fixed and IE bug where point-labels were not being sized correctly.
- Fixed the data-tables (tables for screen readers) so the columns-labels (left-side-headers) are now shown/included.
- Fixed the font-style on chart threat-legends (legend that states threat levels and their colors) so the same font and size is used cross-browser.
- Marked features on global-chart-settings that are not supported in IE.
- Fired a rebuild (combined.js) for changes (of this and previous commits) to be synced for production mode.

--- a/application/modules/default/views/scripts/chart/chart.phtml
+++ b/application/modules/default/views/scripts/chart/chart.phtml
@@ -83,7 +83,7 @@
                 <input type="checkbox" id="pointLabels" />
                     Draw point-labels (numbers on top of bars) <br/>
                 <input type="checkbox" id="pointLabelsOutline" />
-                    Outline point-labels <br/>
+                    Outline point-labels* <br/>
                 <input type="checkbox" id="barShadows" />
                     Draw shadows behind bars <br/>
                 <input type="textbox" id="barShadowDepth" value="3" style="width:10px" />
@@ -92,10 +92,11 @@
                     Draw shadows behind charts <br/>
                 <input type="checkbox" id="gridLines"/>
                     Draw grid-lines <br/>
-                <input type="checkbox" id="fadingDisabeled"/>
-		    Disable fading effects <br/>
+                <input type="checkbox" id="fadingEnabled"/>
+                    Enable fading effects* <br/>
                 <input type="checkbox" id="showDataTable"/>
-		    Show table of raw numbers instead of chart <br/>
+                    Show table of raw numbers instead of chart <br/>
+                    * = This option is not supported in IE
                 </div>
                 
                 <div style="width: 100%; text-align: right;">
