OFJ-963 Executive dashboard
Fulfilling requests from http://jira.openfisma.org/browse/OFJ-963?focusedCommentId=14006#action_14006

- Additional charts on the Findings dashboard now have the option to show Totals, High, Moderate, Low, etc types of finding totals.
- - this featured added to the Finding Forecast (top-left) chart.
- - this featured added to the Findings Past Due (top-right) chart.
- - this featured added to the Findings Without Corrective Actions (middle-right) chart.
- The default option for shadows depth (when enabled) for bar-charts is now 3 instead of 5.
- The terminology referencing point-labels will now be data-labels.
- - (changed the global-settings interface to reflect this)
- The Hide Settings button on chart settings interfaces will now be a YUI button *cringe*twitch*
- The tabbed-container holding chart settings will now have its tabs aligned to the left.
- Chart axis-labels and column-row labels will now use the same font as the rest of Openfisma
- - The font family used is; arial, helvetica, clean, sans-serif
- The y-axis row labels (numerical labels) will now have six labels (starting at 0), and be divisible by 5.
- - This will force y-axis row-labels to be 5, 10, 15 and so on.

--- a/application/modules/default/views/scripts/chart/chart.phtml
+++ b/application/modules/default/views/scripts/chart/chart.phtml
@@ -43,7 +43,7 @@
     <div 
         id="<?php echo $this->escape($this->chartId, 'none');?>WidgetSpaceHolder" 
         class="yui-navset" 
-        style="display: none; width: 400px; margin-left: auto; margin-right: auto;"
+        style="display: none; width: 400px; margin-left: auto; margin-right: auto; text-align: left;"
     >
         <ul class="yui-nav">
             <li class="selected">
@@ -69,7 +69,8 @@
                         type="button" value="Hide Settings" 
                         onClick="setChartSettingsVisibility('<?php 
                             echo $this->escape($this->chartId, 'none');
-                            ?>', false);" 
+                            ?>', false);"
+                        id="<?php echo $this->escape($this->chartId, 'none'); ?>BtnMainSet"
                     />
                 </div>
                 
@@ -81,7 +82,7 @@
                     onClick="globalSettingUpdate('<?php echo $this->escape($this->chartId, 'none');?>');" 
                     style="text-align: left; ">
                 <input type="checkbox" id="pointLabels" />
-                    Draw point-labels (numbers on top of bars) <br/>
+                    Draw data labels (numbers on top of bars) <br/>
                 <input type="checkbox" id="pointLabelsOutline" />
                     Outline point-labels* <br/>
                 <input type="checkbox" id="barShadows" />
@@ -104,11 +105,23 @@
                         onClick="setChartSettingsVisibility('<?php 
                             echo $this->escape($this->chartId, 'none'); 
                             ?>', false);"
+                        id="<?php echo $this->escape($this->chartId, 'none'); ?>BtnGlobSet"
                     />
                 </div>
                 
             </div>
         </div>
+        
+        <?php /* JavaScript is nessesarry for YUI buttons */ ?>
+        <script>
+            var thisChartId = "<?php echo $this->escape($this->chartId, 'none'); ?>";
+            var yuiBtnEventObj = { onclick: { fn: hideButtonClick, obj: thisChartId } };
+            var thisBtnGlob = new YAHOO.widget.Button(thisChartId + "BtnGlobSet", yuiBtnEventObj);
+            var thisBtnMain = new YAHOO.widget.Button(thisChartId + "BtnMainSet", yuiBtnEventObj);
+            //thisBtnGlob.on("click", hideButtonClick);
+            //thisBtnMain.on("click", hideButtonClick);
+        </script>
+        
     </div>    
 
     <script type="text/javascript">
